# game1

./: Cargo.toml  README.md  index.html  main.js  proxy.rs  test.txt  test_typing.txt
src/: main.rs
