[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
